# lynix_api

./: Cargo.toml  README.md  go.mod  go.sum  main.go
api/: certs.go
api/events/: events.go
api/fursuit/: fursuit.go
api/wolfhr/: wolfhr.go
database/models/: certification.go  event.go  fursuit.go  wolfhr.go
src/: main.rs
src/api/: auth_api.rs  event_api.rs  fursuit_api.rs  index_api.rs  mod.rs  wolfhr_api.rs
src/config/: db.rs
src/models/: apimeta_model.rs  error_model.rs  event_model.rs  fursuit_model.rs  mod.rs  user_model.rs  wolfhr_model.rs
src/repository/: event_repo.rs
src/services/: event_service.rs  mod.rs
