[package]
name = "lynix_api"
version = "2.0.3923"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
derive_more = "0.99.17"
validator = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
log = "0"
bson = "1.2"
postgres = "0.19.4" # To be used in the future, DO NOT REMOVE
futures = "0.3.26"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"]