[package]
name = "lynix_api"
version = "2.0.3923"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
actix-session = "0.7.2"
argon2 = "0.5.0"
hmac = "0.12.1"
sha2 = "0.10.6"
jwt = "0.16.0"
derive_more = "0.99.17"
validator = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
bson = "1.2"
futures = "0.3.26"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }